# SSRT-Telemetry

./: .gitignore  .pre-commit-config.yaml  .qmlls.ini  CMakeLists.txt  Doxyfile  InstallMapModules.md  LICENSE  LocationInfo.hpp  MQTT_Installation.md  Main.qml  Makefile  README.md  Resources.qrc  SSRT-Telemetry.pro  SSRTTelemetry.desktop  app.py  application.qrc  config.env  docker-compose.yml  imudata.cpp  imudata.hpp  install.sh  labelmanager.cpp  labelmanager.h  labelmanager.hpp  logging_config.py  main.cpp  maplabel.cpp  maplabel.h  maplabel.hpp  requirements.txt  resources.qrc  roverTracker.cpp  roverTracker.hpp  roverangle.cpp  roverangle.h  roverangle.hpp  rovergpsd.cpp  rovergpsd.h  rovermqtt.cpp  (+7 more)
.github/: pull-request-template.md
.streamlit/: config.toml
SSRT_UI/AdditionalUIComponents/: Badges.ui.qml  Compass_Navigator.ui.qml  Horizontal_Full_width.ui.qml  Horizontal_Middle_inset.ui.qml  Location_on.ui.qml  Videocam.ui.qml
SSRT_UI/AddtionalUIComponents/: Badges.ui.qml  CameraCheckbox.qml  Car.ui.qml  Check_indeterminate_small.ui.qml  Check_small.ui.qml  Checkboxes.ui.qml  Compass_Navigator.ui.qml  Horizontal_Full_width.ui.qml  Horizontal_Middle_inset.ui.qml  Location_on.ui.qml  Vertical_Inset.ui.qml  Videocam.ui.qml
SSRT_UI/CameraPage/: CameraCheckboxes.qml  CameraPage.qml  Camera_Frame.ui.qml
SSRT_UI/Components/: Application_Layout.qml  Application_Layout.ui.qml  Camera_View_Layout.qml  Camera_View_Layout.ui.qml
SSRT_UI/Homepage/: BasePage.qml  Homepage.ui.qml  IMUDataDisplay.qml  LocationInfo.qml  MapDisplay.qml  RoverAngleDisplay.qml  ScienceSensorDisplay.qml
SSRT_UI/LoadingPage/: Loading_Page.ui.qml
SSRTelemetry/: .gitignore  .qmlls.ini
components/: compass.py
docs/: WSL-install.md  project-setup.md
install/: .gitignore  InstallMapModules.md  build_qtmqtt_6.8.1_.sh  build_qtmqtt_6.8.3_.sh  build_qtmqtt_6.9.1_.sh  qtmqtt_build_manual.md
mqtt/: handlers.py  subscriber.py  topics.py
pages/: Camera_Feed_Test_Page.py  Camera_Page.py  Telemetry_Page.py
python-script/: calc_dist_from_points.py
sections/: camera.py  map.py  rover.py  science.py
src/: components.py  mqtt_subscriber.py  settings.py
src/components/: compass.py
src/scripts/: map.js
src/styles/: map_styles.css  streamlit_styles.css  telemetry_styles.css
src/utils/: camera_utils.py  components.py  read_env.py  shared.py
state/: read_latest_from_queue.py
static/scripts/: leaflet.js  map.js  vectorgrid.js
static/styles/: map_styles.css  streamlit_styles.css  telemetry_styles.css
utils/: camera_utils.py  read_env.py
